force-app/main/default/objects/Cell__c/Cell__c.object-meta.xml
<CustomObject>
    <label>Cell</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Cell Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cells</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>