force-app/main/default/objects/Cell__c/fields/Column__c.field-meta.xml
<CustomField>
    <fullName>Column__c</fullName>
    <formula>LEFT(Location__c, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Column</label>
    <type>Text</type>
</CustomField>