force-app/main/default/objects/Cell__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Free</fullName>
                <default>true</default>
                <label>Free</label>
            </value>
            <value>
                <fullName>Occupied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>