force-app/main/default/objects/Cell__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DeliveryDate__c</columns>
    <columns>Container__c</columns>
    <columns>Status__c</columns>
    <columns>Warehouse__c</columns>
    <columns>Location__c</columns>
    <columns>Level__c</columns>
    <columns>Column__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>